# TrainingGround

./: .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .semgrep.yml  .semgrepignore  Cargo.toml  Makefile  README.md  dev.cmd  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  package-lock.json  package.json  pyrightconfig.json
.githooks/: pre-commit  pre-commit-frontend  pre-commit-python  pre-commit-rust  pre-commit-secrets
.github/workflows/: security-scan.yml
.husky/: pre-commit
.zap/: rules.tsv
backend/python-generator/: .dockerignore  Dockerfile  README.md  feature_flags_example.py  pyproject.toml  requirements-base.txt  requirements-ml.txt  run_tests.bat  run_tests.py
backend/python-generator/scripts/: rebuild_embeddings.py
backend/python-generator/src/explanation_service/: __init__.py  app.py  config.py  middleware.py
backend/python-generator/src/explanation_service/api/: __init__.py  routes.py
backend/python-generator/src/explanation_service/cli/: __init__.py
backend/python-generator/src/explanation_service/clients/: __init__.py  yandex_gpt.py
backend/python-generator/src/explanation_service/jobs/: __init__.py  scheduler.py
backend/python-generator/src/explanation_service/models/: __init__.py  dto.py
backend/python-generator/src/explanation_service/services/: __init__.py  cache.py  embedding.py  explanations.py  feature_flags.py  metrics.py  morphology.py  rag.py  templates.py
backend/python-generator/src/explanation_service/template_generator/: __init__.py  dto.py  engine.py  repository.py  routes.py  service.py
backend/python-generator/src/explanation_service/utils/: __init__.py  logging.py
backend/python-generator/src/explanation_service/workers/: __init__.py  embedding_worker.py
backend/python-generator/tests/: conftest.py  test_cache.py  test_template_generator.py  test_template_integration.py  test_template_performance.py
backend/rust-api/: .env.example  .env.test  .gitignore  Cargo.toml  Dockerfile  audit.toml
backend/rust-api/.cargo/: config.toml
backend/rust-api/config/: dev.toml  prod.toml
backend/rust-api/src/: config.rs  extractors.rs  lib.rs  main.rs  metrics.rs
backend/rust-api/src/handlers/: auth.rs  feature_flags.rs  mod.rs  reporting.rs  sessions.rs  sse.rs  student.rs  teacher.rs
backend/rust-api/src/handlers/admin/: audit.rs  backups.rs  feature_flags.rs  groups.rs  incidents.rs  mod.rs  settings.rs  system.rs  users.rs
backend/rust-api/src/middleware/: auth.rs  mod.rs  rate_limit.rs
backend/rust-api/src/middlewares/: auth.rs  csrf.rs  metrics.rs  mod.rs  rate_limit.rs  trace.rs
backend/rust-api/src/models/: answer.rs  anticheat.rs  audit_log.rs  backup.rs  content.rs  feature_flag.rs  group.rs  hint.rs  mod.rs  notification.rs  refresh_token.rs  reporting.rs  system_metrics.rs  system_settings.rs  timer.rs  user.rs
backend/rust-api/src/services/: analytics_worker.rs  answer_service.rs  anticheat_service.rs  audit_service.rs  auth_service.rs  backup_service.rs  content_service.rs  email_service.rs  export_worker.rs  feature_flag_service.rs  group_service.rs  hint_service.rs  incidents_service.rs  mod.rs  object_storage.rs  reporting_service.rs  session_service.rs  superuser_seed.rs  system_settings_service.rs  template_enrichment_service.rs  template_generator.rs  user_management_service.rs
backend/rust-api/src/utils/: retry.rs  time.rs
backend/rust-api/tests/: admin_audit_tests.rs  admin_backups_tests.rs  admin_groups_tests.rs  admin_incidents_tests.rs  admin_rules_tests.rs  admin_settings_tests.rs  admin_system_tests.rs  admin_templates_tests.rs  admin_topics_levels_tests.rs  admin_users_tests.rs  answer_tests.rs  anticheat_tests.rs  auth_tests.rs  content_validation_test.rs  feature_flag_tests.rs  hint_tests.rs  rate_limit_tests.rs  session_tests.rs  template_workflow_tests.rs
backend/rust-api/tests/common/: mod.rs
docs/: A6-testing-docker.md  admin-api-examples.md  admin-guide.md  admin-openapi.yaml  admin-troubleshooting.md  anticheat.md  content-admin-guide.md  content-governance.md  data-model.md  deployment-security.md  dev-setup.md  explanation-service.md  feature-flags-monitoring.md  feature-flags.md  moderation-workflow.md  mongodb-replica-set.md  mongodb-security.md  offline-sync.md  pwa-deployment.md  rbac.md  reporting.md  scoring-rules.md  security-scan-fixes.md  security.md  student-guide.md  teacher-guide.md  template-generator.md  template-syntax.md  ui-student-checklist.md
docs/api/: game.yaml
docs/devops/: disaster-recovery-drills.md  mongodb-keyfile-setup.md  runbooks.md
docs/security/: credentials-management.md  secrets.md
frontend/: .editorconfig  .eslintrc.cjs  .prettierrc.cjs  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite-plugin-sri.ts  vite.config.ts  vitest.config.ts  vitest.setup.ts  web-test-runner.config.mjs
frontend/.storybook/: preview.ts
frontend/public/: manifest.webmanifest  test.html
frontend/scripts/: post-build-sri.ts
frontend/src/: app-shell.ts  env.d.ts  main.ts  sw.ts
frontend/tests/: mock-server.cjs  teacher-dashboard.spec.ts
infra/: install-deps.cmd  mongo-keyfile  mongo-keyfile.example  requirements.txt
infra/config/: mongodb-encryption.yaml
requirements/: глоссарий.md  обоснование выбора.md  предметная область.md
scripts/: README.md  bootstrap-superuser.sh  generate_admin_jwt.py  generate_mongo_keyfile.ps1  generate_mongo_keyfile.sh  generate_superuser_secret.py  git_remove_keyfile_history.sh  import_templates.py  pre-commit.cmd  pre-commit.ps1  pre-commit.sh  rotate_mongo_keyfile.ps1  rotate_mongo_keyfile.sh  run_performance.bat  run_performance.ps1  run_smoke.bat  run_smoke.ps1  setup-dev.ps1  setup-dev.sh  setup-feature-flags-monitoring.sh
tasks/: A0.md  A1.md  A10.md  A11.md  A12.md  A13.md  A2.md  A3.md  A4.md  A5.md  A6-01.md  A6-02.md  A6-03.md  A6-04-1.md  A6-04.md  A6.md  A7.md  A8.md  A9.md  TD-01.md  TD-02.md  TD-03.md  TD-04.md  TD-06-1.md  TD-06-2.md  TD-06-27.md  TD-06-3.md  TD-06.md  инструкция.md
(+204 files in other folders)
