[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "explanation-service"
version = "0.1.0"
description = "YandexGPT-backed explanation builder with RAG and embedding pipeline"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "TrainingGround", email = "devnull@example.com" }
]
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "httpx>=0.27",
  "motor>=3.5",
  "redis>=7.1.0",
  "qdrant-client>=1.9",
  "sentence-transformers>=5.2.0",
  "numpy>=2.4.0",
  "scipy>=1.11",
  "pymorphy2>=0.9",
  "natasha>=1.6",
  "prometheus-client>=0.20",
  "apscheduler>=3.10",
  "typer>=0.12",
  "tenacity>=9.0",
  "python-json-logger>=4.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "mypy>=1.13",
  "ruff>=0.7",
  "httpx>=0.27",
  "types-redis",
  "types-requests",
  "black>=25.12.0",
  "fakeredis>=2.23"
]

[project.scripts]
explanation-worker = "explanation_service.cli.embeddings:main"
rebuild-embeddings = "explanation_service.cli.rebuild_embeddings:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "UP", "I"]
ignore = ["E203", "E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
follow_imports = "skip"
no_implicit_optional = false
warn_return_any = false
warn_unused_ignores = false
# Быстрая проверка без анализа зависимостей
cache_dir = ".mypy_cache"
incremental = true

[[tool.mypy.overrides]]
module = [
    "sentence_transformers.*",
    "natasha.*",
    "pymorphy2.*",
    "fasttext.*",
    "transformers.*",
    "torch.*",
    "numpy.*",
    "scipy.*",
    "qdrant_client.*",
    "motor.*",
    "prometheus_client.*"
]
ignore_errors = true
follow_imports = "skip"
