[package]
name = "trainingground-api"
version = "0.1.0"
edition = "2021"

[lib]
name = "trainingground_api"
path = "src/lib.rs"

[[bin]]
name = "trainingground-api"
path = "src/main.rs"

[[bin]]
name = "reporting-worker"
path = "src/bin/reporting_worker.rs"

[[bin]]
name = "export-worker"
path = "src/bin/export_worker.rs"

[dependencies]
# Web framework
axum = "0.8.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["trace", "cors", "compression-gzip"] }
hyper = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.147"

# Database clients
mongodb = "3.4.1"
redis = { version = "1.0.1", features = ["tokio-comp", "connection-manager", "script", "aio"] }

# Configuration
config = "0.15.19"
dotenvy = "0.15"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.32.0"
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.31.0", features = ["http-proto", "trace"] }

# UUID & DateTime
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = { version = "0.12.28", features = ["json"] }

# Object storage / cloud integrations
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
percent-encoding = "2.3"
url = "2.5"

# Validation
validator = { version = "0.20.0", features = ["derive"] }

# Crypto & Random
rand = "0.9.2"
base64 = "0.22"

# JWT & Auth
# SECURITY NOTE: cargo audit показывает RUSTSEC-2023-0071 в rsa 0.9.9 (Marvin timing attack)
# Но это НЕ применимо к проекту, т.к.:
# 1. Мы используем ТОЛЬКО HMAC (HS256) через EncodingKey::from_secret() - см. middlewares/auth.rs:51
# 2. RSA алгоритмы (RS256/RS384/RS512) НЕ используются в коде
# 3. Уязвимость затрагивает только RSA PKCS#1 v1.5 decryption operations
# 4. jsonwebtoken требует rsa в rust_crypto feature из-за бага в JWK коде
# БЕЗОПАСНО для production - риск отсутствует. Warning помечен как NON-BLOCKING.
jsonwebtoken = { version = "10.2.0", default-features = false, features = ["rust_crypto"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Error handling
thiserror = "2.0.17"
anyhow = "1.0"

# Metrics
prometheus = "0.14.0"
lazy_static = "1.4"

[dev-dependencies]
# Testing
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
hyper = { version = "1.0", features = ["full"] }
http-body-util = "0.1"
serial_test = "3.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
